@@ -1,5 +1,5 @@
 Package: ENmix
-Version: 1.1.1
+Version: 1.1.2
 Date: 2015-04-30
 Title: Data preprocessing and quality control for Illumina HumanMethylation450 BeadChip
 Type: Package
